--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL_Customer.cs" />
     <Compile Include="DAL_Employee.cs" />
     <Compile Include="DP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
