DAL Employee, Role, Supplier frmEmployee: btnAdd - Finish,  Load data To cbbRole(Finish)

--- a/Event/Event.csproj
+++ b/Event/Event.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F5DC8D2-C22F-414B-97D1-F5CA3B71B3E1}</ProjectGuid>
+    <ProjectGuid>{E4DDD7AB-D091-49CA-92A8-5689400E6D38}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL</RootNamespace>
-    <AssemblyName>DAL</AssemblyName>
+    <RootNamespace>Event</RootNamespace>
+    <AssemblyName>Event</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,17 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAL_Employee.cs" />
-    <Compile Include="DAL_Role.cs" />
-    <Compile Include="DAL_Supplier.cs" />
-    <Compile Include="DP.cs" />
+    <Compile Include="EventTextBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DTO\DTO.csproj">
-      <Project>{7c2baec6-d4e6-422c-883e-21f2b9be4109}</Project>
-      <Name>DTO</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
