Finish GUI_Discount And DTO_InvoiceWareHouse

--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DTO_Customer.cs" />
     <Compile Include="DTO_Employee.cs" />
     <Compile Include="DTO_InvoiceSelling.cs" />
+    <Compile Include="DTO_InvoiceWarehouse.cs" />
     <Compile Include="DTO_Product.cs" />
     <Compile Include="DTO_Supplier.cs" />
     <Compile Include="DTO_TypeProduct.cs" />
