DAL,BLL,DTO discount , form discount ,chưa hoàn chỉnh- By Quân

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BLL_Account.cs" />
     <Compile Include="BLL_Customer.cs" />
+    <Compile Include="BLL_Discount.cs" />
     <Compile Include="BLL_Employee.cs" />
     <Compile Include="BLL_Role.cs" />
     <Compile Include="BLL_Supplier.cs" />
