Finish fix error merge branch Discount,  Order and finish get price Discount combobox when user clickbtn Add

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,8 +43,11 @@
   <ItemGroup>
     <Compile Include="BLL_Account.cs" />
     <Compile Include="BLL_Customer.cs" />
+    <Compile Include="BLL_Detail_InvoiceSelling.cs" />
     <Compile Include="BLL_Discount.cs" />
     <Compile Include="BLL_Employee.cs" />
+    <Compile Include="BLL_InvoiceSelling.cs" />
+    <Compile Include="BLL_Product.cs" />
     <Compile Include="BLL_Role.cs" />
     <Compile Include="BLL_Supplier.cs" />
     <Compile Include="BLL_TypeProduct.cs" />
