--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO_Customer.cs" />
+    <Compile Include="DTO_Detail_InvoiceSelling.cs" />
     <Compile Include="DTO_Discount.cs" />
     <Compile Include="DTO_Employee.cs" />
     <Compile Include="DTO_InvoiceSelling.cs" />
