--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -44,9 +44,11 @@
     <Compile Include="DAL_Customer.cs" />
     <Compile Include="DAL_Account.cs" />
     <Compile Include="DAL_Detail_InvloiceSelling.cs" />
+    <Compile Include="DAL_Detail_InvoiceWarehouse.cs" />
     <Compile Include="DAL_Discount.cs" />
     <Compile Include="DAL_Employee.cs" />
     <Compile Include="DAL_InvoiceSelling.cs" />
+    <Compile Include="DAL_InvoiceWarehouse.cs" />
     <Compile Include="DAL_Product.cs" />
     <Compile Include="DAL_Role.cs" />
     <Compile Include="DAL_Supplier.cs" />
