--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DTO_Customer.cs" />
     <Compile Include="DTO_Detail_InvoiceSelling.cs" />
+    <Compile Include="DTO_Detail_InvoiceWarehouse.cs" />
     <Compile Include="DTO_Discount.cs" />
     <Compile Include="DTO_Employee.cs" />
     <Compile Include="DTO_InvoiceSelling.cs" />
