--- a/ManagementSupermarket/GUI.csproj
+++ b/ManagementSupermarket/GUI.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Manager\frmDetailInvoiceSelling.Designer.cs">
       <DependentUpon>frmDetailInvoiceSelling.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\frmDetailWarehouse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\frmDetailWarehouse.Designer.cs">
+      <DependentUpon>frmDetailWarehouse.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\frmDiscount.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmDetailInvoiceSelling.resx">
       <DependentUpon>frmDetailInvoiceSelling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\frmDetailWarehouse.resx">
+      <DependentUpon>frmDetailWarehouse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmDiscount.resx">
       <DependentUpon>frmDiscount.cs</DependentUpon>
