--- a/ManagementSupermarket/GUI.csproj
+++ b/ManagementSupermarket/GUI.csproj
@@ -234,6 +234,26 @@
     <Content Include="Image\Logo Project C#\nhapkho.png" />
     <Content Include="Image\Logo Project C#\timkiem.png" />
     <Content Include="Image\Logo Project C#\undraw_visual_data_re_mxxo.png" />
+    <Content Include="Image\Products\aokhoacdu.jpg" />
+    <Content Include="Image\Products\aothunnam.jpg" />
+    <Content Include="Image\Products\banhbonglan.jpg" />
+    <Content Include="Image\Products\banhquysocola.jpg" />
+    <Content Include="Image\Products\bbbarbie.jpg" />
+    <Content Include="Image\Products\binhdunsieutoc.jpg" />
+    <Content Include="Image\Products\botngotajinomoto.jpg" />
+    <Content Include="Image\Products\dthsamsung.jpg" />
+    <Content Include="Image\Products\duahau.jpg" />
+    <Content Include="Image\Products\gaotamsang.jpg" />
+    <Content Include="Image\Products\kemchongnangspf_50.jpg" />
+    <Content Include="Image\Products\kemduongdaneutrogena.jpg" />
+    <Content Include="Image\Products\noicomdien.jpg" />
+    <Content Include="Image\Products\nuoclavie.jpg" />
+    <Content Include="Image\Products\nuocngotpepsi.jpg" />
+    <Content Include="Image\Products\puzzle.jpg" />
+    <Content Include="Image\Products\raucaixanh.jpg" />
+    <Content Include="Image\Products\suavinamilk.jpg" />
+    <Content Include="Image\Products\tainghebluetooth.jpg" />
+    <Content Include="Image\Products\tieuxanh.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
