Add button Revenue Form Home, Installed NuGet iTextSharp, Finish Print PDF Bill, Add Column To All Form, Update form Employee

--- a/ManagementSupermarket/GUI.csproj
+++ b/ManagementSupermarket/GUI.csproj
@@ -263,6 +263,7 @@
     <Content Include="Image\Products\suavinamilk.jpg" />
     <Content Include="Image\Products\tainghebluetooth.jpg" />
     <Content Include="Image\Products\tieuxanh.jpg" />
+    <None Include="Resources\Fonts\SEGOEUI.TTF" />
     <None Include="Resources\png-clipart-microsoft-excel-logo-microsoft-excel-computer-icons-xls-microsoft-angle-text.png" />
   </ItemGroup>
   <ItemGroup>
