--- a/BLL/packages.config
+++ b/BLL/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="ClosedXML" version="0.102.2" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
   <package id="Irony.NetCore" version="1.0.11" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
