--- a/SetupEngine/SetupEngine.csproj
+++ b/SetupEngine/SetupEngine.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F5DC8D2-C22F-414B-97D1-F5CA3B71B3E1}</ProjectGuid>
+    <ProjectGuid>{A795A82D-FC05-415F-90C4-60E5BCAE26E3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL</RootNamespace>
-    <AssemblyName>DAL</AssemblyName>
+    <RootNamespace>SetupEngine</RootNamespace>
+    <AssemblyName>SetupEngine</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,9 +32,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,27 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAL_Customer.cs" />
-    <Compile Include="DAL_Account.cs" />
-    <Compile Include="DAL_Detail_InvloiceSelling.cs" />
-    <Compile Include="DAL_Detail_InvoiceWarehouse.cs" />
-    <Compile Include="DAL_Discount.cs" />
-    <Compile Include="DAL_Employee.cs" />
-    <Compile Include="DAL_InvoiceSelling.cs" />
-    <Compile Include="DAL_InvoiceWarehouse.cs" />
-    <Compile Include="DAL_Product.cs" />
-    <Compile Include="DAL_Revenue.cs" />
-    <Compile Include="DAL_Role.cs" />
-    <Compile Include="DAL_Supplier.cs" />
-    <Compile Include="DAL_TypeProduct.cs" />
-    <Compile Include="DP.cs" />
+    <Compile Include="InstallerEngine.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="InstallerEngine.Designer.cs">
+      <DependentUpon>InstallerEngine.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DTO\DTO.csproj">
-      <Project>{7c2baec6-d4e6-422c-883e-21f2b9be4109}</Project>
-      <Name>DTO</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="sqldata.txt" />
+    <EmbeddedResource Include="sqldropcreate.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
